Shadow in tabzilla

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -93,7 +93,7 @@ img {
     text-align: center;
     padding-top: 80px;
     padding-bottom: 80px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.8);
+    box-shadow: 0 7px 12px rgba(0,0,0,0.8);
 }
 
 #masthead h1 {
