--- a/public/css/app.css
+++ b/public/css/app.css
@@ -363,3 +363,21 @@ img {
     padding-bottom: 50px;
 }
 
+#newsletter a {
+    color: #FFF;
+    text-decoration: none;
+    font-family: "Open Sans";
+    border: 2px solid #FFF;
+    padding: 10px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 40px;
+    left: 40px;
+    transition: 0.5s;
+}
+
+#newsletter a:hover, #newsletter a:focus, #newsletter a:active {
+    color: #000;
+    border: 2px solid #000;
+    transition: 0.5s;
+}
